# batsignal

./: Cargo.toml  LICENSE  README.md
src/: args.rs  error.rs  main.rs
