[package]
name = "batsignal"
description = "Batsignal is a lightweight command-line utility designed for seamless integration with scripts, allowing you to automate actions based on your device's battery status."
authors = ["Midas van Veen <midasvanveen.email@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "battery", "laptop", "power"]
categories = ["command-line-utilities"]
publish = ["crates.io"]

[dependencies]
battery = "0.7.8"
clap = { version = "4.5.29", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display", "from"] }
